# asri

./: .gitignore  README.md
src/: index.html  package.json
src/src/: App.css  App.tsx
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/src/: lib.rs  main.rs
src/src-tauri/src/asr/: audio.rs  config.rs  decoder.rs  mod.rs  model.rs
src/src/components/: FileDropzone.tsx  ModelSettings.tsx  RecordButton.tsx  StatusIndicator.tsx  TranscriptDisplay.tsx  index.ts
src/src/store/: asr.ts
